<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_icon1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"

            android:fontFamily="@font/g_bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textAlignment="viewStart"
            />

    </LinearLayout>




    <com.google.android.material.tabs.TabLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/category"
        app:tabMode="scrollable"
        app:tabTextColor="@color/darkgrey"
        app:tabSelectedTextColor="@color/black"
        app:tabIndicatorColor="@color/black"
        android:backgroundTint="@color/white"
        app:tabIndicatorHeight="3.5dp"
        >

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/home"
            android:text="@string/home"
            android:id="@+id/home_tab"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/sport"
            android:text="@string/sports"
            android:id="@+id/sports_tab"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/healthcare"
            android:text="@string/health"
            android:id="@+id/health_tab"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/science"
            android:text="@string/science"
            android:id="@+id/science_tab"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:icon="@drawable/tech"
            android:layout_height="wrap_content"
            android:text="@string/technology"
            android:id="@+id/tech_tab"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/entertain"
            android:text="@string/entertainment"
            android:id="@+id/entertain_tab"/>


    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:id="@+id/fragment_container">

    </androidx.viewpager.widget.ViewPager>





</LinearLayout>