<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        app:titleTextColor="@color/black"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/app_icon1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header"

                android:fontFamily="@font/g_bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAlignment="viewStart"
                />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>


  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fadingEdge="vertical"
      android:fadingEdgeLength="50dp"
      android:layout_above="@id/news_detail_btn"
      android:layout_below="@+id/toolbar"
      >
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

          <androidx.cardview.widget.CardView
              android:layout_width="match_parent"
              android:id="@+id/frame"
              android:layout_height="wrap_content"
              android:layout_margin="5dp"
              android:elevation="7dp"
              app:cardCornerRadius="10dp">

          <FrameLayout
              android:layout_width="match_parent"

              android:layout_height="350dp">
              <ImageView
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:src="@drawable/img"

                  android:id="@+id/news_detail_img"
                  android:scaleType="centerCrop"/>
              <ImageView
                  android:layout_width="match_parent"
                  android:background="@drawable/gradient"
                  android:layout_height="match_parent" />
          </FrameLayout>

          </androidx.cardview.widget.CardView>

         <TextView
             android:layout_width="match_parent"
            android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:padding="10dp"
             android:layout_height="wrap_content"
             android:text = "@string/article_title"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:layout_below="@id/frame"
             android:id="@+id/news_detail_title"
             android:fontFamily="@font/g_bold"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_marginTop="5dp"
              android:padding="10dp"
              android:layout_height="wrap_content"
              android:text="@string/sub_description"
              android:id="@+id/newsDescribe"
              android:textStyle="bold"
              android:textColor="@color/black"
              android:textSize="20sp"
              android:layout_below="@id/news_detail_title"
              android:fontFamily="@font/g_light"/>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/content"
              android:padding="10dp"
              android:id="@+id/newsContent"
              android:maxLines="5"
              android:ellipsize="end"
              android:textStyle="bold"
              android:textColor="@color/darkgrey"
              android:textSize="20sp"
              android:layout_below="@id/newsDescribe"
              android:fontFamily="@font/g_light"/>

      </RelativeLayout>



  </ScrollView>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_article_button"
        android:textColor="@color/white"
        android:fontFamily="@font/g_bold"
        android:id="@+id/news_detail_btn"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/black_bar"
        android:layout_marginEnd="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"/>








</RelativeLayout>