<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/article_cardView"
        android:layout_margin="10dp"
        android:elevation="7dp"
        app:cardCornerRadius="10dp"
       >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img"
                android:scaleType="centerCrop"
                android:id="@+id/article_image"/>

            <ImageView
                android:layout_width="match_parent"
                android:background="@drawable/gradient"
                android:layout_height="match_parent" />


            <TextView
                android:id="@+id/article_title"
                android:layout_width="wrap_content"
                android:padding="10dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:text="@string/article_title"
                android:textSize="20sp"
                android:fontFamily="@font/g_bold"
                android:textColor="@color/white"/>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/article_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/article_source"
                    android:textSize="20sp"
                    android:fontFamily="@font/g_light"
                     android:textColor="@color/white" />


                <TextView
                    android:id="@+id/article_date"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/article_date"

                    android:gravity="right"
                    android:textSize="16sp"
                    android:fontFamily="@font/g_light"
                    android:textColor="@color/white"/>





            </LinearLayout>


            
        </FrameLayout>
            



    </androidx.cardview.widget.CardView>


</LinearLayout>